<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="home_fragment_your_accounts">Ваши счета</string>
	<string name="erase">C</string>
	<string name="seven">7</string>
	<string name="one">1</string>
	<string name="four">4</string>
	<string name="expense">Расходы</string>
	<string name="earning">Доходы</string>
	<string name="zero">0</string>
	<string name="dot">.</string>
	<string name="two">2</string>
	<string name="five">5</string>
	<string name="eight">8</string>
	<string name="three">3</string>
	<string name="six">6</string>
	<string name="nine">9</string>
	<string name="account_dots">● ● ● ●</string>
	<string name="balance">Баланс</string>
	<string name="recentOperations">Недавние операции</string>
	<string name="todaySpend">Траты за сегодня</string>
	<string name="addCategory" translatable="false">Добавить категорию</string>
</resources>