<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/topAppBarLayout"
			android:layout_width="match_parent"
			android:layout_height="@dimen/height_65"
			app:layout_constraintTop_toTopOf="parent">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/screenName"
					style="@style/TextAppearance.Material3.HeadlineLarge"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_marginStart="@dimen/spacing_15"
					android:gravity="center"
					android:text="@string/home_fragment_your_accounts"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<ImageView
					android:layout_width="@dimen/height_40"
					android:layout_height="@dimen/height_40"
					android:layout_marginEnd="@dimen/spacing_15"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
			</androidx.constraintlayout.widget.ConstraintLayout>


		</com.google.android.material.appbar.AppBarLayout>


		<androidx.viewpager2.widget.ViewPager2
			android:id="@+id/accountViewPager"
			android:layout_width="match_parent"
			android:layout_height="120dp"
			android:layout_marginVertical="@dimen/spacing_20"
			android:clipToPadding="false"
			app:layout_constraintTop_toBottomOf="@id/topAppBarLayout" />

		<com.github.mikephil.charting.charts.LineChart
			android:id="@+id/chartWeekly"
			android:layout_width="match_parent"
			android:layout_height="300dp"
			android:padding="@dimen/spacing_10"
			app:layout_constraintTop_toBottomOf="@id/todayStats" />

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/todayStats"

			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/spacing_15"
			android:layout_marginVertical="@dimen/spacing_5"
			android:background="?attr/colorSurface"
			android:padding="@dimen/spacing_15"
			app:cardCornerRadius="@dimen/spacing_10"
			app:layout_constraintTop_toBottomOf="@id/accountViewPager">

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/background"
				android:layout_width="@dimen/height_50"
				android:layout_height="@dimen/height_50"
				app:cardCornerRadius="@dimen/spacing_10"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">

				<ImageView
					android:id="@+id/statsIcon"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="?attr/colorError"
					android:gravity="center"
					android:padding="@dimen/spacing_10"
					android:src="@drawable/money_ic"
					android:textSize="20sp"
					tools:text="L" />
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/statsName"
				style="@style/TextAppearance.Material3.LabelLarge"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="@dimen/spacing_15"
				android:text="@string/todaySpend"
				android:textStyle="bold"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/background"
				app:layout_constraintTop_toTopOf="parent" />

			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/statsQuantity"
				style="@style/TextAppearance.Material3.BodyMedium"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing_10"
				android:textColor="?attr/colorError"
				android:textStyle="bold"
				app:layout_constraintEnd_toEndOf="@id/statsName"
				app:layout_constraintStart_toStartOf="@id/statsName"
				app:layout_constraintTop_toBottomOf="@id/statsName"
				tools:text="@string/home_fragment_your_accounts" />

		</androidx.constraintlayout.widget.ConstraintLayout>

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/rvText"
			android:layout_width="match_parent"
			style="@style/TextAppearance.Material3.TitleLarge"
			android:layout_height="wrap_content"
			android:paddingHorizontal="@dimen/spacing_10"
			android:text="@string/recentOperations"
			app:layout_constraintTop_toBottomOf="@id/chartWeekly" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rvOperations"
			tools:itemCount="1"
			android:layout_width="match_parent"
			android:layout_height="400dp"
			android:layout_margin="@dimen/spacing_15"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@id/rvText"
			app:reverseLayout="true"
			app:stackFromEnd="true"
			tools:listitem="@layout/operation_item" />


	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>